--- a/manifest.json
+++ b/manifest.json
@@ -1,19 +1,19 @@
 {
     "name": "東京自駕旅遊小工具",
-    "short_name": "東京行程",
-    "start_url": "./",
+    "short_name": "東京PWA",
+    "start_url": "./index.html",
     "display": "standalone",
-    "background_color": "#f7f7f5",
-    "theme_color": "#ffffff",
-    "description": "您的個人化東京-富士山自駕行程助手。",
+    "background_color": "#ffffff",
+    "theme_color": "#0099FF",
+    "description": "東京與富士山自駕行專屬行程、記帳、導航 PWA。",
     "icons": [
         {
-            "src": "/icon-192x192.png",
+            "src": "icon-192x192.png",
             "sizes": "192x192",
             "type": "image/png"
         },
         {
-            "src": "/icon-512x512.png",
+            "src": "icon-512x512.png",
             "sizes": "512x512",
             "type": "image/png"
         }
